# reddb

./: .dockerignore  .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  BUILD_PERF.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.client.release  Dockerfile.musl  Dockerfile.release  FEATURES.md  LICENSE  Makefile  PLAN-NEW.md  PLAN_DRIVERS.md  README.md  RELEASE.md  RELEASING.md  SECURITY.md  STYLE.md  SUPPORT.md  build.rs  cliff.toml  clippy.toml  dev.docker-compose.yml  docker-compose.full.yml  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uninstall.sh
crates/reddb-client/: Cargo.toml  README.md
crates/reddb-client-connector/: Cargo.toml  README.md
crates/reddb-client-connector/src/: lib.rs
crates/reddb-client/examples/: embedded_helpers.rs
crates/reddb-client/proptest-regressions/: router.txt
crates/reddb-client/src/: bookmark_routing.rs  connect.rs  embedded.rs  error.rs  grpc.rs  http.rs  lib.rs  params.rs  redwire.rs  router.rs  routing_cache.rs  row_format.rs  topology.rs  types.rs
crates/reddb-client/tests/: conformance.rs  embedded_bulk_insert.rs  embedded_query_with.rs  embedded_rejection.rs  embedded_rich_helpers.rs  grpc_pool_concurrency.rs  read_routing_freshness.rs  rebootstrap_e2e.rs  redwire_query_with_live.rs  topology_e2e.rs
crates/reddb-crypto/: Cargo.toml  README.md
crates/reddb-crypto/src/: aes_gcm.rs  key.rs  lib.rs  os_random.rs  page_envelope.rs
crates/reddb-crypto/tests/: page_envelope_format.rs
crates/reddb-file/: Cargo.toml  README.md
crates/reddb-file/src/: ai_model_cache.rs  append_only_segment.rs  audit_log.rs  backup_manifest.rs  backup_temp.rs  blob_cache.rs  bloom_segment.rs  btree_value_layout.rs  clock.rs  column_block.rs  control_store.rs  dst.rs  embedded.rs  file_format.rs  graph_label_registry.rs  graph_record.rs  graph_store.rs  graph_table_index.rs  hnsw_index_codec.rs  ivf_index_codec.rs  layout.rs  lib.rs  local_backend.rs  logical_wal.rs  native_artifact_codec.rs  native_index_artifact.rs  native_store.rs  operational_manifest.rs  physical_metadata.rs  physical_metadata_policy.rs  profile.rs  salvage.rs  scrub.rs  shm.rs  spill.rs  store_wal.rs  table_def.rs  table_def_codec.rs  transaction_wal.rs  turboquant_snapshot.rs  (+9 more)
crates/reddb-file/tests/: append_only_segment.rs  embedded_rdb_artifact.rs  layout_authority.rs  primary_replica_basebackup_crash.rs  primary_replica_relay_timeline_crash.rs  primary_replica_slot_catalog_crash.rs  salvage_embedded_rdb.rs  serverless_current_pointer_crash.rs  storage_layout.rs
crates/reddb-grpc-proto/: Cargo.toml  README.md
crates/reddb-grpc-proto/proto/: reddb.proto
crates/reddb-grpc-proto/src/: lib.rs
crates/reddb-rql/: Cargo.toml  README.md
crates/reddb-rql/src/: analyzer.rs  ast.rs  ast_tests.rs  builders.rs  conformance.rs  core.rs  expr_typing.rs  filter_optimizer.rs  geo_predicate.rs  knowledge.rs  lexer.rs  lib.rs  limits.rs  renderer.rs  sql.rs  sql_lowering.rs
crates/reddb-rql/tests/: conformance.rs  front_end_authority.rs  reddb_conformance.rs
crates/reddb-server/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/reddb-server/benches/: ai_batch_bench.rs  blob_cache_bench.rs  bloom_byte_key_bench.rs  cache_ring_contention_bench.rs  cache_topology_spike_bench.rs  column_policy_gate_bench.rs  columnar_read_bench.rs  concurrent_commit_bench.rs  row_id_intersection_bench.rs  timeseries_ingest_bench.rs  turboquant_neon_bench.rs
crates/reddb-server/proptest-regressions/: rpc_stdio.txt
crates/reddb-server/src/: ai.rs  api.rs  backup_bootstrap.rs  catalog.rs  document_body.rs  document_migration.rs  engine.rs  grpc.rs  health.rs  index.rs  json_field.rs  lib.rs  notifications.rs  operational_bootstrap.rs  pager_zone_migration.rs  physical.rs  reserved_fields.rs  rpc_stdio.rs  runtime.rs  serde_json.rs  server.rs  service_cli.rs  sqlstate.rs  streams.rs
crates/reddb-server/tests/: aggregate_column_casing_diag.rs  ai_transport.rs  append_only_segment_runtime.rs  ask_parser.rs  ask_snapshots.rs  cache_topology_spike_contract.rs  cascade_replication_e2e.rs  columnar_activation_e2e.rs  columnar_read_bridge_e2e.rs  conformance.rs  control_events_config.rs  control_events_policy.rs  control_events_user.rs  document_btree_index_e2e.rs  e2e_issue_1042_ui_bridge.rs  e2e_issue_1044_remote_bridge.rs  e2e_issue_1047_server_ui.rs  e2e_issue_1048_auth_handoff.rs  e2e_issue_1400_document_ordered_btree.rs  e2e_issue_805_query_stream.rs  e2e_issue_806_query_streaming.rs  e2e_issue_807_query_stream_cursor.rs  e2e_issue_808_query_stream_cancel.rs  e2e_issue_809_query_stream_matrix.rs  e2e_issue_936_browser_credential_layer.rs  election_consensus_e2e.rs  embedded_rdb_skeleton.rs  ephemeral_store_1786.rs  geo_parser.rs  geo_parser_snapshots.rs  graph_dsl_parser.rs  graph_dsl_snapshots.rs  inline_config_read_gate_1743.rs  integration_result_column_ordering.rs  integration_turbo_boot_rebuild.rs  integration_turbo_crash_inject.rs  integration_turbo_snapshot.rs  integration_turboquant_blocked_layout.rs  issue_1708_array_literal_typing.rs  issue_704_btree_rebuild_spills_oversized.rs  (+58 more)
crates/reddb-types/: Cargo.toml  README.md
crates/reddb-types/benches/: array_display_bench.rs  array_format_bench.rs
crates/reddb-types/src/: canonical_key.rs  cast_catalog.rs  catalog.rs  coerce.rs  coercion_spine.rs  conversions.rs  distance.rs  document_body_codec.rs  duration.rs  function_catalog.rs  index_hint.rs  key_dictionary.rs  knowledge.rs  lib.rs  operator.rs  operator_catalog.rs  parametric.rs  polymorphic.rs  queue_mode.rs  serde_json.rs  types.rs  value_codec.rs  (+2 more)
crates/reddb-wire/: Cargo.toml  README.md
crates/unreliable-libc/: Cargo.toml  build.rs
drivers/cpp/: CMakeLists.txt  README.md
drivers/python/: Cargo.toml  README.md  build.rs  pyproject.toml  reddb.pyi
drivers/python-asyncio/: README.md  pyproject.toml
drivers/rust/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: conn_string_parser.rs  migration_parser.rs  query_with_params.rs  sql_parser.rs
(+4252 files in other folders)
