[workspace]
members = [
    "crates/reddb-client",
    "crates/reddb-client-connector",
    "crates/reddb-grpc-proto",
    "crates/reddb-server",
    "crates/reddb-wire",
]
resolver = "2"

[package]
name = "reddb-io"
version = "1.0.8"
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
description = "Unified multi-model database: tables, documents, graphs, vectors, and key-value in one engine. Umbrella crate that hosts the `red` binary and re-exports the workspace."
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"
documentation = "https://docs.rs/reddb-io"
readme = "README.md"
keywords = ["database", "vector-search", "graph", "document-store", "rust"]
categories = ["database-implementations", "data-structures"]
include = [
    "/src/**/*.rs",
    "/build.rs",
    "/README.md",
    "/Cargo.toml",
    "/LICENSE",
]

[[bin]]
name = "red"
path = "src/bin/red.rs"

[lib]
name = "reddb"
path = "src/lib.rs"

[dependencies]
reddb-wire = { package = "reddb-io-wire", version = "1.0", path = "crates/reddb-wire" }
reddb-grpc-proto = { package = "reddb-io-grpc-proto", version = "1.0", path = "crates/reddb-grpc-proto" }
reddb-client = { package = "reddb-io-client", version = "1.0", path = "crates/reddb-client" }
reddb-server = { package = "reddb-io-server", version = "1.0", path = "crates/reddb-server" }
# `red` bin spins up its own multi-thread tokio runtime (server
# subcommand needs explicit Builder configuration with custom
# stack size). All other reddb modules pull tokio transitively
# via reddb-server, so this is for the bin only.
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
backend-s3 = ["reddb-server/backend-s3"]
backend-turso = ["reddb-server/backend-turso"]
backend-d1 = ["reddb-server/backend-d1"]
otel = ["reddb-server/otel"]
ai-ner-network = ["reddb-server/ai-ner-network"]
embedded = ["reddb-client/embedded"]
redwire = ["reddb-client/redwire"]

[dev-dependencies]
# Tests at the umbrella level reach into the published-driver
# layer of `reddb-client` (RedWire codec + frame, embedded
# integration smoke). The crate-root dep keeps `default-features
# = false`; the dev-only entry layers in the published features
# the tests need.
reddb-client = { package = "reddb-io-client", version = "1.0", path = "crates/reddb-client", features = ["embedded", "redwire"] }
# Used by `tests/compile_fail.rs` to assert that misuse of
# `LeaseStore::new` (passing a non-CAS backend) fails to compile.
trybuild = "1"
# OAuth-JWT end-to-end smoke. `jsonwebtoken` mints + decodes RS256
# tokens; `serde_json` shapes the JWKS responses. Both are dev-only.
# v10 requires opting into a crypto backend; `rust_crypto` keeps the
# tests pure-Rust (no system C deps), matching the rest of the dev tree.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde_json = "1"
# HTTP smoke tests (REST endpoints) and AI-live comment-clustering
# integration probes use ureq directly.
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
# Tonic + RedWire integration tests reach the wire under TLS.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Several integration tests (e2e_isolation_levels, integration_*)
# spin up an async runtime via the macro form.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# tonic for gRPC-side smoke tests.
tonic = { version = "0.14", features = ["transport"] }
# Self-signed certificate generator for TLS smoke tests.
rcgen = "0.14"
# IAM policy property tests at the umbrella integration-test layer.
proptest = "1"

# ---------------------------------------------------------------------
# Build profile tuning — trades runtime perf for build wall time
# where it makes sense.
# ---------------------------------------------------------------------

# Dev profile already has `incremental = true` by default. We bump
# `codegen-units` so the linker can parallelise more aggressively
# at the cost of a tiny runtime hit (we don't care about runtime
# in dev). 256 is the cargo-stable sweet spot for crates of this
# size.
[profile.dev]
incremental = true
codegen-units = 256

# Test profile inherits from dev, but we restate the values so the
# intent is explicit and `cargo test` is as fast as `cargo build`.
[profile.test]
incremental = true
codegen-units = 256

# Production binaries abort on panic. RedDB relies on WAL/recovery for
# consistency after process death; unwinding through worker/write paths
# risks leaving application-layer state half-mutated.
[profile.release]
panic = "abort"

# Fast-build variant of release. Trades ~5-10% runtime perf for
# ~3× faster cold build of the `red` binary.
[profile.release-fast]
inherits = "release"
opt-level = 1
codegen-units = 256
lto = false
strip = "symbols"
debug = 0
incremental = true

# Static-binary-friendly profile for distributed v1.0 release builds.
[profile.release-static]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
incremental = false
