[workspace]
members = [
    "crates/reddb-client",
    "crates/reddb-client-connector",
    "crates/reddb-crypto",
    "crates/reddb-file",
    "crates/reddb-grpc-proto",
    "crates/reddb-rql",
    "crates/reddb-server",
    "crates/reddb-types",
    "crates/reddb-wire",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"

[workspace.dependencies]
reddb-client = { package = "reddb-io-client", version = "1.0", path = "crates/reddb-client" }
reddb-client-connector = { package = "reddb-io-client-connector", version = "1.0", path = "crates/reddb-client-connector" }
reddb-crypto = { package = "reddb-io-crypto", version = "1.0", path = "crates/reddb-crypto" }
reddb-file = { package = "reddb-io-file", version = "1.0", path = "crates/reddb-file" }
reddb-grpc-proto = { package = "reddb-io-grpc-proto", version = "1.0", path = "crates/reddb-grpc-proto" }
reddb-rql = { package = "reddb-io-rql", version = "1.0", path = "crates/reddb-rql" }
reddb-server = { package = "reddb-io-server", version = "1.0", path = "crates/reddb-server" }
reddb-types = { package = "reddb-io-types", version = "1.0", path = "crates/reddb-types" }
reddb-wire = { package = "reddb-io-wire", version = "1.0", path = "crates/reddb-wire" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "allow"
# Function-length nudge (PRD #1252). Threshold lives in clippy.toml
# (too-many-lines-threshold = 120). Wired as a warn-level ratchet: legacy
# crates carry `#![allow(clippy::too_many_lines)]` so the gate bites on
# new/changed code, not the pre-existing oversized functions (incl. the
# generated gRPC stubs in reddb-grpc-proto).
too_many_lines = "warn"
# Truncating-cast nudge (PRD #1252). The mechanical half of the
# index/count/size discipline in STYLE.md: silent `as` truncations on lengths
# and on-disk offsets get surfaced so they become checked/explicit casts.
# Wired as a warn-level ratchet — legacy crates carry
# `#![allow(clippy::cast_possible_truncation)]` so the gate bites on
# new/changed code, not the pre-existing truncating casts.
cast_possible_truncation = "warn"

[package]
name = "reddb-io"
version = "1.12.0"
edition.workspace = true
# Cargo auto-discovers every top-level `tests/*.rs` file as a separate
# integration-test binary. This crate has 269 such files; keep discovery off
# and route them through the 12 grouped domain harnesses below.
autotests = false
authors.workspace = true
description = "Unified multi-model database: tables, documents, graphs, vectors, and key-value in one engine. Umbrella crate that hosts the `red` binary and re-exports the workspace."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io"
readme = "README.md"
keywords = ["database", "vector-search", "graph", "document-store", "rust"]
categories = ["database-implementations", "data-structures"]
include = [
    "/src/**/*.rs",
    "/build.rs",
    "/README.md",
    "/Cargo.toml",
    "/LICENSE",
]

[[bin]]
name = "red"
path = "src/bin/red.rs"

[lib]
name = "reddb"
path = "src/lib.rs"

[lints]
workspace = true

[[test]]
name = "grouped_ai_search"
path = "tests/grouped/ai_search.rs"

[[test]]
name = "grouped_analytics_metrics"
path = "tests/grouped/analytics_metrics.rs"

[[test]]
name = "grouped_auth_iam_security"
path = "tests/grouped/auth_iam_security.rs"

[[test]]
name = "grouped_chaos_drill_persistence"
path = "tests/grouped/chaos_drill_persistence.rs"

[[test]]
name = "grouped_cli_transport"
path = "tests/grouped/cli_transport.rs"

[[test]]
name = "grouped_documents_kv_queues"
path = "tests/grouped/documents_kv_queues.rs"

[[test]]
name = "grouped_general_multimodel"
path = "tests/grouped/general_multimodel.rs"

[[test]]
name = "grouped_graph_topology"
path = "tests/grouped/graph_topology.rs"

[[test]]
name = "grouped_materialized_views_events_config_audit"
path = "tests/grouped/materialized_views_events_config_audit.rs"

[[test]]
name = "grouped_replication"
path = "tests/grouped/replication.rs"

[[test]]
name = "grouped_sql_core"
path = "tests/grouped/sql_core.rs"

[[test]]
name = "grouped_surface_contracts"
path = "tests/grouped_surface_contracts.rs"

[[test]]
name = "grouped_timeseries_retention"
path = "tests/grouped/timeseries_retention.rs"

[dependencies]
reddb-wire = { workspace = true }
reddb-grpc-proto = { workspace = true }
reddb-client = { workspace = true }
reddb-server = { workspace = true }
# `red` bin spins up its own multi-thread tokio runtime (server
# subcommand needs explicit Builder configuration with custom
# stack size). All other reddb modules pull tokio transitively
# via reddb-server, so this is for the bin only.
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
backend-s3 = ["reddb-server/backend-s3"]
backend-turso = ["reddb-server/backend-turso"]
backend-d1 = ["reddb-server/backend-d1"]
otel = ["reddb-server/otel"]
ai-ner-network = ["reddb-server/ai-ner-network"]
local-models = ["reddb-server/local-models"]
embedded = ["reddb-client/embedded"]
redwire = ["reddb-client/redwire"]

[dev-dependencies]
# Tests at the umbrella level reach into the published-driver
# layer of `reddb-client` (RedWire codec + frame, embedded
# integration smoke). The crate-root dep keeps `default-features
# = false`; the dev-only entry layers in the published features
# the tests need.
reddb-client = { workspace = true, features = ["embedded", "redwire"] }
reddb-file = { workspace = true }
# Workspace-level RQL conformance drivers execute the corpus owned by
# `crates/reddb-rql` against the current in-server engine. Keeping these deps
# here preserves the pure `reddb-io-rql -> reddb-io-types` crate graph.
reddb-rql = { workspace = true }
reddb-types = { workspace = true }
sqllogictest = "0.29"
# Used by `tests/compile_fail.rs` to assert that misuse of
# `LeaseStore::new` (passing a non-CAS backend) fails to compile.
trybuild = "1"
# OAuth-JWT end-to-end smoke. `jsonwebtoken` mints + decodes RS256
# tokens; `serde_json` shapes the JWKS responses. Both are dev-only.
# v10 requires opting into a crypto backend; `rust_crypto` keeps the
# tests pure-Rust (no system C deps), matching the rest of the dev tree.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde_json = "1"
prost = "0.14"
snap = "1"
# HTTP smoke tests (REST endpoints) and AI-live comment-clustering
# integration probes use ureq directly.
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
# Tonic + RedWire integration tests reach the wire under TLS.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Several integration tests (e2e_isolation_levels, integration_*)
# spin up an async runtime via the macro form.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# tonic for gRPC-side smoke tests.
tonic = { version = "0.14", features = ["transport"] }
# Streaming-RPC client tests (e.g. gRPC BatchInsert / #586) build
# request streams via `tokio_stream::iter`. Server-side already
# depends on it transitively through tonic; we restate it here as a
# dev-only dep so the umbrella test crate can name it directly.
tokio-stream = "0.1"
# Self-signed certificate generator for TLS smoke tests.
rcgen = "0.14"
# IAM policy property tests at the umbrella integration-test layer.
proptest = "1"
# TempDir-backed integration-test database cleanup harness.
tempfile = "3"

# ---------------------------------------------------------------------
# Build profile tuning — trades runtime perf for build wall time
# where it makes sense.
# ---------------------------------------------------------------------

# Dev profile already has `incremental = true` by default. We bump
# `codegen-units` so the linker can parallelise more aggressively
# at the cost of a tiny runtime hit (we don't care about runtime
# in dev). 256 is the cargo-stable sweet spot for crates of this
# size.
[profile.dev]
incremental = true
codegen-units = 256
# Full debuginfo (cargo default `debug = true`) was ~400MB PER test binary;
# with ~350 integration-test files each statically linking the whole engine,
# that ballooned target/debug to 75G+ (disk-full link failures). line-tables-only
# keeps file:line in backtraces (enough to locate a failing assertion) and drops
# the variable/type debuginfo that was the bulk. unpacked split-debuginfo moves
# what remains into separate files instead of embedding it in every binary.
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Test profile inherits from dev, but we restate the values so the
# intent is explicit and `cargo test` is as fast as `cargo build`.
[profile.test]
incremental = true
codegen-units = 256
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Production binaries abort on panic. RedDB relies on WAL/recovery for
# consistency after process death; unwinding through worker/write paths
# risks leaving application-layer state half-mutated.
[profile.release]
panic = "abort"

# Fast-build variant of release. Trades ~5-10% runtime perf for
# ~3× faster cold build of the `red` binary.
[profile.release-fast]
inherits = "release"
opt-level = 1
codegen-units = 256
lto = false
strip = "symbols"
debug = 0
incremental = true

# Static-binary-friendly profile for distributed v1.0 release builds.
[profile.release-static]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
incremental = false
