[package]
name = "reddb-io-client-connector"
version = "1.0.0"
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
description = "Workspace-internal gRPC connector used by `reddb-server` (rpc_stdio) and `reddb-client`. Splitting it out of `reddb-client` breaks the otherwise-circular path dependency between `reddb-client[embedded]` (which pulls `reddb-server`) and `reddb-server` (which needs the connector)."
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"
documentation = "https://docs.rs/reddb-io-client-connector"
readme = "README.md"
keywords = ["reddb", "database", "client", "grpc"]
categories = ["database", "api-bindings"]
include = [
    "/src/**/*.rs",
    "/README.md",
    "/Cargo.toml",
]

[lib]
name = "reddb_client_connector"
path = "src/lib.rs"

[dependencies]
reddb-grpc-proto = { package = "reddb-io-grpc-proto", version = "1.0", path = "../reddb-grpc-proto" }
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen"] }
