[package]
name = "reddb-io-client-connector"
version = "1.22.0"
edition.workspace = true
authors.workspace = true
description = "Workspace-internal gRPC connector used by `reddb-server` (rpc_stdio) and `reddb-client`. Splitting it out of `reddb-client` breaks the otherwise-circular path dependency between `reddb-client[embedded]` (which pulls `reddb-server`) and `reddb-server` (which needs the connector)."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-client-connector"
readme = "README.md"
keywords = ["reddb", "database", "client", "grpc"]
categories = ["database", "api-bindings"]
include = [
    "/src/**/*.rs",
    "/README.md",
    "/Cargo.toml",
]

[lib]
name = "reddb_client_connector"
path = "src/lib.rs"

[dependencies]
reddb-grpc-proto = { workspace = true }
reddb-wire = { workspace = true }
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen"] }

[lints]
workspace = true
