[package]
name = "reddb-client"
version = "0.2.9"
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
description = "Internal RedDB client (gRPC connector + REPL) used by the `red` and `red_client` binaries. Will subsume the published driver from drivers/rust in a follow-up commit."
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"
publish = false

[dependencies]
reddb-grpc-proto = { version = "0.2", path = "../reddb-grpc-proto" }
reddb-wire = { version = "0.2", path = "../reddb-wire" }
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen"] }
# `red_client` binary spins up a current-thread tokio runtime via
# `#[tokio::main]`. Library callers (the `red` bin) bring their
# own runtime, so the macro feature is only needed for the bin.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "net", "io-util"] }
# RedWire handshake payloads are JSON-encoded today (per ADR 0001),
# so the connector serialises Hello/AuthResponse and parses HelloAck
# /AuthOk via serde_json. Pulled into the lib because both the
# library RedWireClient and the bin route through it.
serde_json = "1"
# Lightweight sync HTTP client for the http:// / https:// transport.
# `default-features = false` skips the platform native TLS in favour
# of rustls, matching the rest of the workspace's TLS stack.
ureq = { version = "3.3", default-features = false, features = ["rustls"] }

[[bin]]
name = "red_client"
path = "src/bin/red_client.rs"
