[package]
name = "reddb-io-crypto"
version = "1.18.0"
edition.workspace = true
authors.workspace = true
description = "RedDB cryptographic authority: the canonical per-page encryption-at-rest envelope (AES-256-GCM), mandatory encrypt parameters, and key parsing."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-crypto"
keywords = ["database", "encryption", "aes-gcm", "at-rest", "envelope"]
categories = ["cryptography", "database-implementations"]

[lib]
name = "reddb_crypto"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.11"

[lints]
workspace = true
