[package]
name = "reddb-io-file"
version = "1.23.2"
edition.workspace = true
authors.workspace = true
description = "RedDB file artifact layer: single-file .rdb layout, WAL, snapshots, checkpoints, locks, and recovery."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-file"
keywords = ["database", "wal", "storage", "filesystem"]
categories = ["database-implementations", "filesystem"]

[lib]
name = "reddb_file"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
crc32fast = "1.5"
fs2 = "0.4"
hex = "0.4"
lz4_flex = { version = "0.13", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
toml = "1.1"
tempfile = "3"

[lints]
workspace = true
